# abby-normal

./: .gitignore  AGENTS.md  LICENSE  ORCHESTRATION_SETUP.md  README.md  backfill_embeddings.py  embeddings.py  memory_export.py  memory_query.py  migrate_fts.py  migrate_mekanik_data.py  migrate_to_untyped.py  orchestration.py  pyproject.toml  requirements.txt  schema.sql  setup.py  tags
agents/: backend-specialist.md  contract-fix.md  frontend-specialist.md  orchestrator.md  review-backend.md  review-devops.md  review-frontend.md  review-lead.md
docs/plans/: 2026-04-18-remove-entry-type.md
hooks/: abby-normal.js  session_start.py
mcp/: server.py
